WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
189979
URLWithUserTypedString should return nil for URLs deemed to be invalid by WebCore::URL
https://bugs.webkit.org/show_bug.cgi?id=189979
Summary
URLWithUserTypedString should return nil for URLs deemed to be invalid by Web...
Alex Christensen
Reported
2018-09-25 17:23:50 PDT
URLWithUserTypedString should return nil for URLs deemed to be invalid by WebCore::URL
Attachments
Patch
(2.47 KB, patch)
2018-09-25 17:25 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-sierra-wk2
(3.42 MB, application/zip)
2018-09-25 18:59 PDT
,
EWS Watchlist
no flags
Details
Patch
(5.57 KB, patch)
2018-09-26 17:27 PDT
,
Alex Christensen
youennf
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-sierra-wk2
(3.35 MB, application/zip)
2018-09-26 18:45 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-09-25 17:25:37 PDT
Created
attachment 350817
[details]
Patch
Alex Christensen
Comment 2
2018-09-25 17:25:41 PDT
<
rdar://problem/44119696
>
EWS Watchlist
Comment 3
2018-09-25 18:59:32 PDT
Comment on
attachment 350817
[details]
Patch
Attachment 350817
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9350966
New failing tests: fast/frames/frame-limit.html editing/selection/iframe.html
EWS Watchlist
Comment 4
2018-09-25 18:59:33 PDT
Created
attachment 350830
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Alex Christensen
Comment 5
2018-09-25 21:54:11 PDT
Test failures unrelated and fixed by
https://trac.webkit.org/changeset/236492/webkit
Alex Christensen
Comment 6
2018-09-26 14:52:41 PDT
http://trac.webkit.org/r236524
Alex Christensen
Comment 7
2018-09-26 16:34:38 PDT
This broke these API tests: TestWebKitAPI.WebCore.URLExtras_Space TestWebKitAPI.WebCore.URLExtras_Solidus TestWebKitAPI.WebCore.URLExtras_NotSpoofed TestWebKitAPI.WKWebView.LoadAlternateHTMLStringFromProvisionalLoadErrorBackToBack TestWebKitAPI.WebKit.LoadInvalidURLRequest
Alex Christensen
Comment 8
2018-09-26 16:35:24 PDT
Reverted in
r236533
Alex Christensen
Comment 9
2018-09-26 16:51:58 PDT
Reopening
Alex Christensen
Comment 10
2018-09-26 17:27:23 PDT
Created
attachment 350930
[details]
Patch
EWS Watchlist
Comment 11
2018-09-26 18:45:16 PDT
Comment on
attachment 350930
[details]
Patch
Attachment 350930
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9362950
New failing tests: compositing/geometry/limit-layer-bounds-opacity-transition.html
EWS Watchlist
Comment 12
2018-09-26 18:45:18 PDT
Created
attachment 350934
[details]
Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Alex Christensen
Comment 13
2018-09-27 09:34:57 PDT
https://trac.webkit.org/changeset/236551/webkit
Alex Christensen
Comment 14
2018-10-01 17:17:17 PDT
Rolled out in
http://trac.webkit.org/r236702
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug