URLWithUserTypedString should return nil for URLs deemed to be invalid by WebCore::URL https://bugs.webkit.org/show_bug.cgi?id=189979 <rdar://problem/44119696>

Reviewed by Chris Dumez.

Source/WebCore:

Covered by an API test.

* platform/mac/WebCoreNSURLExtras.mm:
(WebCore::URLWithData):

Tools:

* TestWebKitAPI/Tests/WebCore/cocoa/URLExtras.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/204967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236524 268f45cc-cd09-0410-ab3c-d52691b4dbfc