Source/WebCore/platform/mac/WebCoreNSURLExtras.mm
@@ -853,6 +853,9 @@ NSURL *URLWithData(NSData *data, NSURL *baseURL)
     } else
         result = [NSURL URLWithString:@""];
 
+    if (!WebCore::URL(result).isValid())
+        return nil;
+    
     return result;
 }
 static NSData *dataWithUserTypedString(NSString *string)
